--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,10 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     
+    - name: Create ECS Cluster
+      run: |
+        aws ecs create-cluster --cluster-name hello-world-cluster
+    
     - name: Force new deployment
       run: |
         aws ecs update-service --cluster hello-world-cluster --service hello-world-service --force-new-deployment
-        
