--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to AWS ECS
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 env:
   AWS_REGION: us-west-2
@@ -33,10 +33,6 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-    
-    - name: Create ECS Cluster
-      run: |
-        aws ecs create-cluster --cluster-name hello-world-cluster
     
     - name: Force new deployment
       run: |
